--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@ API_ID=
 API_HASH=
 
 
-SLEEP_TIME=[2700, 4200]
-START_DELAY=[5, 100]
+SLEEP_TIME=[60, 120]
+START_DELAY=[5, 10]
 AUTO_TASK=True
 TASKS_TO_DO=["paint20pixels", "x:notpixel", "x:notcoin", "channel:notcoin", "channel:notpixel_channel", "joinSquad", "jettonTask"]
 AUTO_DRAW=True
 JOIN_TG_CHANNELS=True
 CLAIM_REWARD=True
-AUTO_UPGRADE=True
-REF_ID=
+AUTO_UPGRADE=false
+REF_ID=f6647553132_s723057
 IN_USE_SESSIONS_PATH=bot/config/used_sessions.txt
 NIGHT_MODE=False
 NIGHT_TIME=[0, 7]
